--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,5 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: deps
       run: sudo apt install libglfw3-dev glew-utils libglew-dev libglm-dev
+    - name: folders
+      run: mkdir obj bin
     - name: make
       run: make
